Ajustement photo de profil

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accueil — Kamey Tshinyam Parfait</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,51 +11,42 @@
 
 <body>
 
-    <!-- Barre de navigation -->
-    <header class="top-nav">
-        <nav>
-            <a href="index.html">Accueil</a>
-            <a href="cv.html">CV</a>
-            <a href="projet.html">Projets</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <!-- Navigation -->
+    <nav class="menu-top">
+        <a href="index.html">Accueil</a>
+        <a href="cv.html">CV</a>
+        <a href="projet.html">Projets</a>
+        <a href="contact.html">Contact</a>
+    </nav>
 
-        <div class="social-top">
-            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://x.com" target="_blank">X</a>
-        </div>
-    </header>
-
-    <!-- Section principale -->
     <main class="hero">
 
         <!-- Colonne gauche -->
-        <div class="left-panel">
-            <img src="profil.jpeg" class="profile-img" alt="Photo de profil">
+        <div class="left">
+            <img src="profil.jpeg" class="big-photo" alt="Photo de profil">
 
-            <h1>Kamey Tshinyam Parfait</h1>
-            <p>Développeur Web — Création de sites modernes et responsive</p>
+            <h1 class="name">Kamey Tshinyam Parfait</h1>
+            <p class="role">Développeur Web — Modern UI & Responsive Design</p>
 
-            <div class="cta-buttons">
-                <a href="cv.html" class="btn">Voir mon CV</a>
-                <a href="projet.html" class="btn">Mes projets</a>
-                <a href="contact.html" class="btn">Me contacter</a>
+            <div class="btn-group">
+                <a class="btn" href="cv.html">Mon CV</a>
+                <a class="btn" href="projet.html">Mes projets</a>
+                <a class="btn" href="contact.html">Me contacter</a>
             </div>
         </div>
 
         <!-- Colonne droite -->
-        <div class="right-panel">
-            <h2>Bienvenue 👋</h2>
-            <p>
-                Je suis développeur Web passionné par le design, l'expérience utilisateur
-                et la création de sites modernes. Explore mon portfolio 👇
-            </p>
+        <div class="right">
+            <div class="socials">
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+                <a href="https://twitter.com" target="_blank">X</a>
+                <a href="https://youtube.com" target="_blank">YouTube</a>
+            </div>
         </div>
 
     </main>
 
 </body>
-
 
 </html>
