Modification uniforme pour toutes les pages

--- a/cv.html
+++ b/cv.html
@@ -3,80 +3,48 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV — Kamey Tshinyam Parfait</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="cv">
-        <nav>
-            <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
-            <div class="menu">
-                <a href="index.html">Accueil</a>
-                <a href="cv.html">CV</a>
-                <a href="projet.html">Projets</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </nav>
+<body class="page">
 
-        <div class="header-card">
-
-            <div class="header-info">
-                <h1>Kamey Tshinyam Parfait</h1>
-                <p>Développeur Web — tshinyamp8@gmail.com — +243 854772265</p>
-
-                <div class="socials">
-                    <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-                    <a href="https://www.instagram.com" target="_blank">Instagram</a>
-                </div>
-            </div>
+    <nav class="nav">
+        <div class="brand">Kamey Tshinyam Parfait</div>
+        <div class="menu">
+            <a href="index.html">Accueil</a>
+            <a href="cv.html" class="active">CV</a>
+            <a href="projet.html">Projets</a>
+            <a href="contact.html">Contact</a>
         </div>
+    </nav>
 
-        <div class="page-grid">
-            <aside class="sidebar">
-                <div class="card">
-                    <h3>Contact</h3>
-                    <p>tshinyamp8@gmail.com<br>+243 854772265</p>
-                </div>
+    <main class="card">
+        <h1>Mon CV</h1>
 
-                <div class="card">
-                    <h3>Compétences</h3>
-                    <ul>
-                        <li>HTML / CSS</li>
-                        <li>Git & GitHub</li>
-                        <li>Responsive Design</li>
-                        <li>Linux / Terminal</li>
-                        <li>ingénierie de prompt</li>
-                    </ul>
-                </div>
-            </aside>
+        <section>
+            <h2>Compétences</h2>
+            <ul class="list">
+                <li>HTML / CSS</li>
+                <li>Responsive Design</li>
+                <li>Terminal / Linux</li>
+                <li>Git & GitHub</li>
+            </ul>
+        </section>
 
-            <main class="main-card">
-                <div class="section">
-                    <h2>Profil</h2>
-                    <p>Développeur Web débutant passionné par le design, le développement et l'apprentissage continu.
-                    </p>
-                </div>
+        <section>
+            <h2>Expérience</h2>
+            <p>Expérience en développement front-end (en cours d’évolution — portfolio en construction).</p>
+        </section>
 
-                <div class="section">
-                    <h2>Expériences & Projets</h2>
-                    <div class="project">
-                        <h3>Portfolio Personnel</h3>
-                        <p>Site en HTML/CSS, hébergé sur GitHub Pages.</p>
-                    </div>
-                </div>
+        <section>
+            <h2>Formation</h2>
+            <p>Autoformation en développement Web moderne.</p>
+        </section>
+    </main>
 
-                <div class="section">
-                    <h2>Formation</h2>
-                    <p>Autoformation en développement web.</p>
-                </div>
-            </main>
-        </div>
-
-        <footer>© 2025 — Kamey Tshinyam Parfait</footer>
-    </div>
+    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
 </body>
 
 </html>
