--- a/projet.html
+++ b/projet.html
@@ -3,49 +3,40 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets — Kamey Tshinyam Parfait</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="project">
-        <nav>
-            <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
-            <div class="menu">
-                <a href="index.html">Accueil</a>
-                <a href="cv.html">CV</a>
-                <a href="projet.html">Projets</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </nav>
+<body class="page">
 
-        <header class="header-card">
+    <nav class="nav">
+        <div class="brand">Kamey Tshinyam Parfait</div>
+        <div class="menu">
+            <a href="index.html">Accueil</a>
+            <a href="cv.html">CV</a>
+            <a href="projet.html" class="active">Projets</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </nav>
 
-            <div class="header-info">
-                <h1>Mes Projets</h1>
-                <p>Quelques réalisations et idées en cours.</p>
-            </div>
-        </header>
+    <main class="card">
+        <h1>Mes Projets</h1>
 
-        <main class="main-card">
-            <div class="section">
-                <h2>Portfolio personnel</h2>
-                <div class="project">
-                    <h3>Site Portfolio</h3>
-                    <p>Site statique construit en HTML/CSS et hébergé sur GitHub Pages.</p>
-                </div>
+        <div class="project-box">
+            <h3>Portfolio Personnel</h3>
+            <p>Site Web moderne réalisé en HTML / CSS avec un design premium.</p>
+        </div>
 
-                <div class="project">
-                    <h3>Projet TODO (exemple)</h3>
-                    <p>Application de gestion de tâches (à venir).</p>
-                </div>
-            </div>
-        </main>
+        <div class="project-box">
+            <h3>Projet à venir</h3>
+            <p>Plus de projets seront ajoutés prochainement.</p>
+        </div>
 
-        <footer>© 2025 — Kamey Tshinyam Parfait</footer>
-    </div>
+    </main>
+
+    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+
 </body>
 
 </html>
