--- a/contact.html
+++ b/contact.html
@@ -1,122 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact — Kamey Tshinyam Parfait</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box
-        }
-
-        body {
-            margin: 0;
-            background: #071026;
-            color: #eaf3ff;
-            font-family: Inter;
-            padding: 28px;
-            display: flex;
-            justify-content: center
-        }
-
-        .wrap {
-            width: 100%;
-            max-width: 820px
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 18px
-        }
-
-        a {
-            color: #9aa4b2;
-            text-decoration: none
-        }
-
-        .card {
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), transparent);
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(2, 6, 23, 0.6)
-        }
-
-        form {
-            display: grid;
-            gap: 12px
-        }
-
-        input,
-        textarea {
-            width: 100%;
-            padding: 12px;
-            border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            background: rgba(255, 255, 255, 0.02);
-            color: inherit;
-            font-size: 14px;
-        }
-
-        button {
-            padding: 12px 16px;
-            border-radius: 10px;
-            border: none;
-            background: linear-gradient(90deg, #7c5cff, #4bd5ff);
-            color: #071022;
-            font-weight: 700;
-            cursor: pointer;
-        }
-
-        .note {
-            color: #9aa4b2;
-            font-size: 13px
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="wrap">
-        <header>
-            <div><strong>Contact</strong>
-                <div style="color:#9aa4b2;font-size:13px">Laisse-moi un message</div>
-            </div>
-            <nav><a href="index.html">← Accueil</a></nav>
-        </header>
+<body class="page">
 
-        <section class="card">
-            <form action="#" method="post" novalidate>
-                <label>
-                    <div style="font-weight:600">Nom</div>
-                    <input type="text" name="name" placeholder="Ton nom" required>
-                </label>
+    <nav class="nav">
+        <div class="brand">Kamey Tshinyam Parfait</div>
+        <div class="menu">
+            <a href="index.html">Accueil</a>
+            <a href="cv.html">CV</a>
+            <a href="projet.html">Projets</a>
+            <a href="contact.html" class="active">Contact</a>
+        </div>
+    </nav>
 
-                <label>
-                    <div style="font-weight:600">Email</div>
-                    <input type="email" name="email" placeholder="adresse@email.com" required>
-                </label>
+    <main class="card">
+        <h1>Contact</h1>
 
-                <label>
-                    <div style="font-weight:600">Sujet</div>
-                    <input type="text" name="subject" placeholder="Sujet du message">
-                </label>
+        <p>Email principal : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
+        <p>Email secondaire : <a href="mailto:tshinyamp8@yahoo.com">tshinyamp8@yahoo.com</a></p>
+        <p>Téléphone : +243 854772265</p>
 
-                <label>
-                    <div style="font-weight:600">Message</div>
-                    <textarea name="message" rows="6" placeholder="Écris ton message ici..." required></textarea>
-                </label>
+        <div class="social-links">
+            <a href="#" class="btn">LinkedIn</a>
+            <a href="#" class="btn">Instagram</a>
+            <a href="#" class="btn">X</a>
+        </div>
+    </main>
 
-                <div style="display:flex;gap:12px;align-items:center;justify-content:space-between">
-                    <div class="note">Le formulaire est statique (action="#"). Remplace action par ton endpoint (ex:
-                        Formspree, Netlify Forms, backend) pour recevoir les messages.</div>
-                    <button type="submit">Envoyer</button>
-                </div>
-            </form>
-        </section>
-    </div>
+    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+
 </body>
 
 </html>
