--- a/projet.html
+++ b/projet.html
@@ -10,15 +10,16 @@
 
 <body class="page">
 
-    <nav class="nav">
-        <div class="brand">Kamey Tshinyam Parfait</div>
-        <div class="menu">
+    <nav class="navbar">
+        <div class="logo">Kamey Tshinyam Parfait</div>
+        <div class="nav-links">
             <a href="index.html">Accueil</a>
             <a href="cv.html">CV</a>
             <a href="projet.html" class="active">Projets</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
+
 
     <main class="card">
         <h1>Mes Projets</h1>
