Ajout d'un formulaire contct

--- a/contact.html
+++ b/contact.html
@@ -24,16 +24,34 @@
     <main class="card">
         <h1>Contact</h1>
 
-        <p>Email principal : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
-        <p>Email secondaire : <a href="mailto:tshinyamp8@yahoo.com">tshinyamp8@yahoo.com</a></p>
-        <p>Téléphone : +243 854772265</p>
+        <p>Vous pouvez me contacter via email ou en utilisant le formulaire ci-dessous :</p>
 
-        <div class="social-links">
-            <a href="#" class="btn">LinkedIn</a>
-            <a href="#" class="btn">Instagram</a>
-            <a href="#" class="btn">X</a>
-        </div>
+        <form class="contact-form">
+            <label>Nom</label>
+            <input type="text" placeholder="Votre nom">
+
+            <label>Email</label>
+            <input type="email" placeholder="Votre adresse email">
+
+            <label>Objet</label>
+            <input type="text" placeholder="Sujet du message">
+
+            <label>Message</label>
+            <textarea placeholder="Votre message ici..."></textarea>
+
+            <button type="submit" class="btn send">Envoyer</button>
+        </form>
+
+        <p style="margin-top:20px;">
+            📩 Email direct :
+            <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a><br>
+            📩 Secondaire :
+            <a href="mailto:tshinyamp8@yahoo.com">tshinyam@yahoo.com</a><br>
+            📞 Téléphone : +243 854772265
+        </p>
+
     </main>
+
 
     <footer>© 2025 — Kamey Tshinyam Parfait</footer>
 
