Ajout liens reseaux sociaux

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <p class="subtitle">Développeur Web • Création de sites modernes & responsive</p>
 
         <div class="socials">
-            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://twitter.com" target="_blank">X</a>
+            <a href="https://www.linkedin.com/in/parfait-kamey-5a0240247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/parfait-kamey-5a0240247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank">Instagram</a>
+            <a href="https://x.com/KameyParfa27596?t=TW4e1vmAdG98GqiRmqD7cg&s=09" target="_blank">X</a>
         </div>
 
         <div class="buttons">
