Ajustement alignement à droite

--- a/cv.html
+++ b/cv.html
@@ -21,16 +21,19 @@
     </nav>
 
 
-    <main class="card">
+    <main class="card> cv-layout">
+
         <h1>Mon CV</h1>
 
         <section>
             <h2>Compétences</h2>
+
             <ul class="list">
                 <li>HTML / CSS</li>
                 <li>Responsive Design</li>
                 <li>Terminal / Linux</li>
                 <li>Git & GitHub</li>
+                <li>ingénierie de prompt</li>
             </ul>
         </section>
 
