--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <p class="intro">
             👋 Bienvenue ! Je suis développeur Web passionné par le design, l’expérience utilisateur
-            et le développement moderne. Explore mon univers ci-dessous.
+            et le développement moderne. Explore mon univers sur mes autres pages.
         </p>
 
     </section>
