Aligner le contenu du CV à droite

--- a/cv.html
+++ b/cv.html
@@ -20,32 +20,33 @@
         </div>
     </nav>
 
+    <main>
+        <div class="page-container cv-page">
 
-    <main class="page-container">
+            <h1>Mon CV</h1>
 
-        <h1>Mon CV</h1>
+            <section>
+                <h2>Compétences</h2>
 
-        <section>
-            <h2>Compétences</h2>
+                <ul class="list">
+                    <li>HTML / CSS</li>
+                    <li>Responsive Design</li>
+                    <li>Terminal / Linux</li>
+                    <li>Git & GitHub</li>
+                    <li>ingénierie de prompt</li>
+                </ul>
+            </section>
 
-            <ul class="list">
-                <li>HTML / CSS</li>
-                <li>Responsive Design</li>
-                <li>Terminal / Linux</li>
-                <li>Git & GitHub</li>
-                <li>ingénierie de prompt</li>
-            </ul>
-        </section>
+            <section>
+                <h2>Expérience</h2>
+                <p>Expérience en développement front-end (en cours d’évolution — portfolio en construction).</p>
+            </section>
 
-        <section>
-            <h2>Expérience</h2>
-            <p>Expérience en développement front-end (en cours d’évolution — portfolio en construction).</p>
-        </section>
-
-        <section>
-            <h2>Formation</h2>
-            <p>Autoformation en développement Web moderne.</p>
-        </section>
+            <section>
+                <h2>Formation</h2>
+                <p>Autoformation en développement Web moderne.</p>
+            </section>
+        </div>
     </main>
 
     <footer>© 2025 — Kamey Tshinyam Parfait</footer>
