Aligner le contenu du CV à gauche

--- a/cv.html
+++ b/cv.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="page">
+<body>
 
-    <nav class="navbar">
-        <div class="logo">Kamey Tshinyam Parfait</div>
-        <div class="nav-links">
+    <nav>
+        <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
+        <div class="menu">
             <a href="index.html">Accueil</a>
             <a href="cv.html" class="active">CV</a>
             <a href="projet.html">Projets</a>
@@ -20,36 +20,31 @@
         </div>
     </nav>
 
-    <main>
-        <div class="page-container cv-page">
+    <div class="cv-container">
 
-            <h1>Mon CV</h1>
+        <h1>Mon CV</h1>
 
-            <section>
-                <h2>Compétences</h2>
+        <h2>Compétences</h2>
+        <ul>
+            <li>HTML / CSS</li>
+            <li>Responsive Design</li>
+            <li>Linux / Terminal</li>
+            <li>Git & GitHub</li>
+            <li>Ingénierie de prompt</li>
+        </ul>
 
-                <ul class="list">
-                    <li>HTML / CSS</li>
-                    <li>Responsive Design</li>
-                    <li>Terminal / Linux</li>
-                    <li>Git & GitHub</li>
-                    <li>ingénierie de prompt</li>
-                </ul>
-            </section>
+        <h2>Expérience</h2>
+        <p>Développement front-end (projets personnels — toujours en évolution).</p>
 
-            <section>
-                <h2>Expérience</h2>
-                <p>Expérience en développement front-end (en cours d’évolution — portfolio en construction).</p>
-            </section>
+        <h2>Formation</h2>
+        <p>Apprentissage en développement web moderne.</p>
 
-            <section>
-                <h2>Formation</h2>
-                <p>Autoformation en développement Web moderne.</p>
-            </section>
-        </div>
-    </main>
+    </div>
 
-    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+    <footer>
+        © 2025 — Kamey Tshinyam Parfait
+    </footer>
+
 </body>
 
 </html>
