SPECIFIQUE A LA PAGE CV

--- a/cv.html
+++ b/cv.html
@@ -10,41 +10,48 @@
 
 <body>
 
-    <nav>
-        <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
-        <div class="menu">
-            <a href="index.html">Accueil</a>
-            <a href="cv.html" class="active">CV</a>
-            <a href="projet.html">Projets</a>
-            <a href="contact.html">Contact</a>
+    <body class="cv-page">
+
+        <nav>
+            <nav class="cv-nav">
+
+                <div class="brand">
+                    <a href="Kamey Tshinyam Parfait</a>
         </div>
-    </nav>
 
-    <div class="cv-container">
+        <div class=" menu">
+                        <a href="index.html">Accueil</a>
+                        <a href="cv.html" class="active">CV</a>
+                        <a href="projet.html">Projets</a>
+                        <a href="contact.html">Contact</a>
+                </div>
+            </nav>
 
-        <h1>Mon CV</h1>
+            <div class="cv-container">
 
-        <h2>Compétences</h2>
-        <ul>
-            <li>HTML / CSS</li>
-            <li>Responsive Design</li>
-            <li>Linux / Terminal</li>
-            <li>Git & GitHub</li>
-            <li>Ingénierie de prompt</li>
-        </ul>
+                <h1>Mon CV</h1>
 
-        <h2>Expérience</h2>
-        <p>Développement front-end (projets personnels — toujours en évolution).</p>
+                <h2>Compétences</h2>
+                <ul>
+                    <li>HTML / CSS</li>
+                    <li>Responsive Design</li>
+                    <li>Linux / Terminal</li>
+                    <li>Git & GitHub</li>
+                    <li>Ingénierie de prompt</li>
+                </ul>
 
-        <h2>Formation</h2>
-        <p>Apprentissage en développement web moderne.</p>
+                <h2>Expérience</h2>
+                <p>Développement front-end (projets personnels — toujours en évolution).</p>
 
-    </div>
+                <h2>Formation</h2>
+                <p>Apprentissage en développement web moderne.</p>
 
-    <footer>
-        © 2025 — Kamey Tshinyam Parfait
-    </footer>
+            </div>
 
-</body>
+            <footer>
+                © 2025 — Kamey Tshinyam Parfait
+            </footer>
+
+    </body>
 
 </html>
