Modification du bouton envoyer sur la page contact

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="page">
+<body class="page contact-page">
 
     <nav class="navbar">
         <div class="logo">Kamey Tshinyam Parfait</div>
