Ajout texte competances

--- a/cv.html
+++ b/cv.html
@@ -38,6 +38,7 @@
                     <li>Linux / Terminal</li>
                     <li>Git & GitHub</li>
                     <li>Ingénierie de prompt</li>
+                    <li>Conception des applications web-Mobiles</li>
                 </ul>
 
                 <h2>Expérience</h2>
