--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="profil.jpeg" class="hero-img" alt="Photo">
 
         <h1 class="title">Kamey Tshinyam Parfait</h1>
-        <p class="subtitle">Développeur Web • Création de sites modernes & responsive</p>
+        <p class="subtitle">Concepteur et Développeur Web • Création de sites et applications modernes & responsive</p>
 
         <div class="socials">
             <a href="https://www.linkedin.com/in/parfait-kamey-5a0240247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
